y.output
Grammar

    0 $accept: program $end

    1 program: /* empty */
    2        | program stmt

    3 stmt: sysStmt ';'
    4     | dbStmt ';'
    5     | tbStmt ';'
    6     | idxStmt ';'

    7 sysStmt: SHOW DATABASES

    8 dbStmt: CREATE DATABASE dbName
    9       | DROP DATABASE dbName
   10       | USE dbName
   11       | SHOW TABLES

   12 tbStmt: CREATE TABLE tbName '(' fieldList ')'
   13       | DROP TABLE tbName
   14       | DESC tbName
   15       | INSERT INTO tbName VALUES valueLists
   16       | DELETE FROM tbName WHERE whereClause
   17       | UPDATE tbName SET setClause WHERE whereClause
   18       | SELECT selector FROM tableList WHERE whereClause

   19 idxStmt: CREATE INDEX tbName '(' colName ')'
   20        | DROP INDEX tbName '(' colName ')'

   21 fieldList: field
   22          | fieldList ',' field

   23 field: colName type notNullOrEmpty
   24      | PRIMARY KEY '(' columnList ')'
   25      | FOREIGN KEY '(' colName ')' REFERENCES tbName '(' colName ')'

   26 notNullOrEmpty: NOT NULL
   27               | /* empty */

   28 type: INT valueIntOrEmpty
   29     | VARCHAR valueIntOrEmpty
   30     | DATE
   31     | FLOAT

   32 valueIntOrEmpty: VALUE_INT
   33                | /* empty */

   34 valueLists: '(' valueList ')'
   35           | valueLists ',' '(' valueList ')'

   36 valueList: value
   37          | valueList ',' value

   38 value: VALUE_INT
   39      | VALUE_STRING
   40      | NULL

   41 whereClause: whereClauseItem
   42            | whereClauseItem AND whereClause

   43 whereClauseItem: col op expr
   44                | col IS NULL
   45                | col IS NOT NULL

   46 col: colName
   47    | tbName '.' colName

   48 op: '='
   49   | NOT_EQUAL
   50   | LESS_OR_EQUAL
   51   | MORE_OR_EQUAL
   52   | '<'
   53   | '>'

   54 expr: value
   55     | col

   56 setClause: colName '=' value
   57          | setClause ',' colName '=' value

   58 selector: '*'
   59         | cols

   60 cols: col
   61     | cols ',' col

   62 tableList: tbName
   63          | tableList ',' tbName

   64 columnList: colName
   65           | columnList ',' colName

   66 dbName: IDENTIFIER

   67 tbName: IDENTIFIER

   68 colName: IDENTIFIER


Terminals, with rules where they appear

$end (0) 0
'(' (40) 12 19 20 24 25 34 35
')' (41) 12 19 20 24 25 34 35
'*' (42) 58
',' (44) 22 35 37 57 61 63 65
'.' (46) 47
';' (59) 3 4 5 6
'<' (60) 52
'=' (61) 48 56 57
'>' (62) 53
error (256)
DATABASE (258) 8 9
DATABASES (259) 7
TABLE (260) 12 13
TABLES (261) 11
SHOW (262) 7 11
CREATE (263) 8 12 19
DROP (264) 9 13 20
USE (265) 10
PRIMARY (266) 24
KEY (267) 24 25
NOT (268) 26 45
NULL (269) 26 40 44 45
INSERT (270) 15
INTO (271) 15
VALUES (272) 15
DELETE (273) 16
FROM (274) 16 18
WHERE (275) 16 17 18
UPDATE (276) 17
SET (277) 17
SELECT (278) 18
IS (279) 44 45
INT (280) 28
VARCHAR (281) 29
DESC (282) 14
REFERENCES (283) 25
INDEX (284) 19 20
AND (285) 42
DATE (286) 30
FLOAT (287) 31
FOREIGN (288) 25
NOT_EQUAL (289) 49
MORE_OR_EQUAL (290) 51
LESS_OR_EQUAL (291) 50
VALUE_STRING (292) 39
VALUE_INT (293) 32 38
IDENTIFIER (294) 66 67 68


Nonterminals, with rules where they appear

$accept (49)
    on left: 0
program (50)
    on left: 1 2, on right: 0 2
stmt (51)
    on left: 3 4 5 6, on right: 2
sysStmt (52)
    on left: 7, on right: 3
dbStmt (53)
    on left: 8 9 10 11, on right: 4
tbStmt (54)
    on left: 12 13 14 15 16 17 18, on right: 5
idxStmt (55)
    on left: 19 20, on right: 6
fieldList (56)
    on left: 21 22, on right: 12 22
field (57)
    on left: 23 24 25, on right: 21 22
notNullOrEmpty (58)
    on left: 26 27, on right: 23
type (59)
    on left: 28 29 30 31, on right: 23
valueIntOrEmpty (60)
    on left: 32 33, on right: 28 29
valueLists (61)
    on left: 34 35, on right: 15 35
valueList (62)
    on left: 36 37, on right: 34 35 37
value (63)
    on left: 38 39 40, on right: 36 37 54 56 57
whereClause (64)
    on left: 41 42, on right: 16 17 18 42
whereClauseItem (65)
    on left: 43 44 45, on right: 41 42
col (66)
    on left: 46 47, on right: 43 44 45 55 60 61
op (67)
    on left: 48 49 50 51 52 53, on right: 43
expr (68)
    on left: 54 55, on right: 43
setClause (69)
    on left: 56 57, on right: 17 57
selector (70)
    on left: 58 59, on right: 18
cols (71)
    on left: 60 61, on right: 59 61
tableList (72)
    on left: 62 63, on right: 18 63
columnList (73)
    on left: 64 65, on right: 24 65
dbName (74)
    on left: 66, on right: 8 9 10
tbName (75)
    on left: 67, on right: 12 13 14 15 16 17 19 20 25 47 62 63
colName (76)
    on left: 68, on right: 19 20 23 25 46 47 56 57 64 65


state 0

    0 $accept: . program $end
    1 program: .
    2        | . program stmt

    $default  reduce using rule 1 (program)

    program  go to state 1


state 1

    0 $accept: program . $end
    2 program: program . stmt
    3 stmt: . sysStmt ';'
    4     | . dbStmt ';'
    5     | . tbStmt ';'
    6     | . idxStmt ';'
    7 sysStmt: . SHOW DATABASES
    8 dbStmt: . CREATE DATABASE dbName
    9       | . DROP DATABASE dbName
   10       | . USE dbName
   11       | . SHOW TABLES
   12 tbStmt: . CREATE TABLE tbName '(' fieldList ')'
   13       | . DROP TABLE tbName
   14       | . DESC tbName
   15       | . INSERT INTO tbName VALUES valueLists
   16       | . DELETE FROM tbName WHERE whereClause
   17       | . UPDATE tbName SET setClause WHERE whereClause
   18       | . SELECT selector FROM tableList WHERE whereClause
   19 idxStmt: . CREATE INDEX tbName '(' colName ')'
   20        | . DROP INDEX tbName '(' colName ')'

    $end    shift, and go to state 2
    SHOW    shift, and go to state 3
    CREATE  shift, and go to state 4
    DROP    shift, and go to state 5
    USE     shift, and go to state 6
    INSERT  shift, and go to state 7
    DELETE  shift, and go to state 8
    UPDATE  shift, and go to state 9
    SELECT  shift, and go to state 10
    DESC    shift, and go to state 11

    stmt     go to state 12
    sysStmt  go to state 13
    dbStmt   go to state 14
    tbStmt   go to state 15
    idxStmt  go to state 16


state 2

    0 $accept: program $end .

    $default  accept


state 3

    7 sysStmt: SHOW . DATABASES
   11 dbStmt: SHOW . TABLES

    DATABASES  shift, and go to state 17
    TABLES     shift, and go to state 18


state 4

    8 dbStmt: CREATE . DATABASE dbName
   12 tbStmt: CREATE . TABLE tbName '(' fieldList ')'
   19 idxStmt: CREATE . INDEX tbName '(' colName ')'

    DATABASE  shift, and go to state 19
    TABLE     shift, and go to state 20
    INDEX     shift, and go to state 21


state 5

    9 dbStmt: DROP . DATABASE dbName
   13 tbStmt: DROP . TABLE tbName
   20 idxStmt: DROP . INDEX tbName '(' colName ')'

    DATABASE  shift, and go to state 22
    TABLE     shift, and go to state 23
    INDEX     shift, and go to state 24


state 6

   10 dbStmt: USE . dbName
   66 dbName: . IDENTIFIER

    IDENTIFIER  shift, and go to state 25

    dbName  go to state 26


state 7

   15 tbStmt: INSERT . INTO tbName VALUES valueLists

    INTO  shift, and go to state 27


state 8

   16 tbStmt: DELETE . FROM tbName WHERE whereClause

    FROM  shift, and go to state 28


state 9

   17 tbStmt: UPDATE . tbName SET setClause WHERE whereClause
   67 tbName: . IDENTIFIER

    IDENTIFIER  shift, and go to state 29

    tbName  go to state 30


state 10

   18 tbStmt: SELECT . selector FROM tableList WHERE whereClause
   46 col: . colName
   47    | . tbName '.' colName
   58 selector: . '*'
   59         | . cols
   60 cols: . col
   61     | . cols ',' col
   67 tbName: . IDENTIFIER
   68 colName: . IDENTIFIER

    '*'         shift, and go to state 31
    IDENTIFIER  shift, and go to state 32

    col       go to state 33
    selector  go to state 34
    cols      go to state 35
    tbName    go to state 36
    colName   go to state 37


state 11

   14 tbStmt: DESC . tbName
   67 tbName: . IDENTIFIER

    IDENTIFIER  shift, and go to state 29

    tbName  go to state 38


state 12

    2 program: program stmt .

    $default  reduce using rule 2 (program)


state 13

    3 stmt: sysStmt . ';'

    ';'  shift, and go to state 39


state 14

    4 stmt: dbStmt . ';'

    ';'  shift, and go to state 40


state 15

    5 stmt: tbStmt . ';'

    ';'  shift, and go to state 41


state 16

    6 stmt: idxStmt . ';'

    ';'  shift, and go to state 42


state 17

    7 sysStmt: SHOW DATABASES .

    $default  reduce using rule 7 (sysStmt)


state 18

   11 dbStmt: SHOW TABLES .

    $default  reduce using rule 11 (dbStmt)


state 19

    8 dbStmt: CREATE DATABASE . dbName
   66 dbName: . IDENTIFIER

    IDENTIFIER  shift, and go to state 25

    dbName  go to state 43


state 20

   12 tbStmt: CREATE TABLE . tbName '(' fieldList ')'
   67 tbName: . IDENTIFIER

    IDENTIFIER  shift, and go to state 29

    tbName  go to state 44


state 21

   19 idxStmt: CREATE INDEX . tbName '(' colName ')'
   67 tbName: . IDENTIFIER

    IDENTIFIER  shift, and go to state 29

    tbName  go to state 45


state 22

    9 dbStmt: DROP DATABASE . dbName
   66 dbName: . IDENTIFIER

    IDENTIFIER  shift, and go to state 25

    dbName  go to state 46


state 23

   13 tbStmt: DROP TABLE . tbName
   67 tbName: . IDENTIFIER

    IDENTIFIER  shift, and go to state 29

    tbName  go to state 47


state 24

   20 idxStmt: DROP INDEX . tbName '(' colName ')'
   67 tbName: . IDENTIFIER

    IDENTIFIER  shift, and go to state 29

    tbName  go to state 48


state 25

   66 dbName: IDENTIFIER .

    $default  reduce using rule 66 (dbName)


state 26

   10 dbStmt: USE dbName .

    $default  reduce using rule 10 (dbStmt)


state 27

   15 tbStmt: INSERT INTO . tbName VALUES valueLists
   67 tbName: . IDENTIFIER

    IDENTIFIER  shift, and go to state 29

    tbName  go to state 49


state 28

   16 tbStmt: DELETE FROM . tbName WHERE whereClause
   67 tbName: . IDENTIFIER

    IDENTIFIER  shift, and go to state 29

    tbName  go to state 50


state 29

   67 tbName: IDENTIFIER .

    $default  reduce using rule 67 (tbName)


state 30

   17 tbStmt: UPDATE tbName . SET setClause WHERE whereClause

    SET  shift, and go to state 51


state 31

   58 selector: '*' .

    $default  reduce using rule 58 (selector)


state 32

   67 tbName: IDENTIFIER .  ['.']
   68 colName: IDENTIFIER .  [FROM, IS, AND, ';', ',', '=', '<', '>', NOT_EQUAL, MORE_OR_EQUAL, LESS_OR_EQUAL]

    '.'       reduce using rule 67 (tbName)
    $default  reduce using rule 68 (colName)


state 33

   60 cols: col .

    $default  reduce using rule 60 (cols)


state 34

   18 tbStmt: SELECT selector . FROM tableList WHERE whereClause

    FROM  shift, and go to state 52


state 35

   59 selector: cols .  [FROM]
   61 cols: cols . ',' col

    ','  shift, and go to state 53

    $default  reduce using rule 59 (selector)


state 36

   47 col: tbName . '.' colName

    '.'  shift, and go to state 54


state 37

   46 col: colName .

    $default  reduce using rule 46 (col)


state 38

   14 tbStmt: DESC tbName .

    $default  reduce using rule 14 (tbStmt)


state 39

    3 stmt: sysStmt ';' .

    $default  reduce using rule 3 (stmt)


state 40

    4 stmt: dbStmt ';' .

    $default  reduce using rule 4 (stmt)


state 41

    5 stmt: tbStmt ';' .

    $default  reduce using rule 5 (stmt)


state 42

    6 stmt: idxStmt ';' .

    $default  reduce using rule 6 (stmt)


state 43

    8 dbStmt: CREATE DATABASE dbName .

    $default  reduce using rule 8 (dbStmt)


state 44

   12 tbStmt: CREATE TABLE tbName . '(' fieldList ')'

    '('  shift, and go to state 55


state 45

   19 idxStmt: CREATE INDEX tbName . '(' colName ')'

    '('  shift, and go to state 56


state 46

    9 dbStmt: DROP DATABASE dbName .

    $default  reduce using rule 9 (dbStmt)


state 47

   13 tbStmt: DROP TABLE tbName .

    $default  reduce using rule 13 (tbStmt)


state 48

   20 idxStmt: DROP INDEX tbName . '(' colName ')'

    '('  shift, and go to state 57


state 49

   15 tbStmt: INSERT INTO tbName . VALUES valueLists

    VALUES  shift, and go to state 58


state 50

   16 tbStmt: DELETE FROM tbName . WHERE whereClause

    WHERE  shift, and go to state 59


state 51

   17 tbStmt: UPDATE tbName SET . setClause WHERE whereClause
   56 setClause: . colName '=' value
   57          | . setClause ',' colName '=' value
   68 colName: . IDENTIFIER

    IDENTIFIER  shift, and go to state 60

    setClause  go to state 61
    colName    go to state 62


state 52

   18 tbStmt: SELECT selector FROM . tableList WHERE whereClause
   62 tableList: . tbName
   63          | . tableList ',' tbName
   67 tbName: . IDENTIFIER

    IDENTIFIER  shift, and go to state 29

    tableList  go to state 63
    tbName     go to state 64


state 53

   46 col: . colName
   47    | . tbName '.' colName
   61 cols: cols ',' . col
   67 tbName: . IDENTIFIER
   68 colName: . IDENTIFIER

    IDENTIFIER  shift, and go to state 32

    col      go to state 65
    tbName   go to state 36
    colName  go to state 37


state 54

   47 col: tbName '.' . colName
   68 colName: . IDENTIFIER

    IDENTIFIER  shift, and go to state 60

    colName  go to state 66


state 55

   12 tbStmt: CREATE TABLE tbName '(' . fieldList ')'
   21 fieldList: . field
   22          | . fieldList ',' field
   23 field: . colName type notNullOrEmpty
   24      | . PRIMARY KEY '(' columnList ')'
   25      | . FOREIGN KEY '(' colName ')' REFERENCES tbName '(' colName ')'
   68 colName: . IDENTIFIER

    PRIMARY     shift, and go to state 67
    FOREIGN     shift, and go to state 68
    IDENTIFIER  shift, and go to state 60

    fieldList  go to state 69
    field      go to state 70
    colName    go to state 71


state 56

   19 idxStmt: CREATE INDEX tbName '(' . colName ')'
   68 colName: . IDENTIFIER

    IDENTIFIER  shift, and go to state 60

    colName  go to state 72


state 57

   20 idxStmt: DROP INDEX tbName '(' . colName ')'
   68 colName: . IDENTIFIER

    IDENTIFIER  shift, and go to state 60

    colName  go to state 73


state 58

   15 tbStmt: INSERT INTO tbName VALUES . valueLists
   34 valueLists: . '(' valueList ')'
   35           | . valueLists ',' '(' valueList ')'

    '('  shift, and go to state 74

    valueLists  go to state 75


state 59

   16 tbStmt: DELETE FROM tbName WHERE . whereClause
   41 whereClause: . whereClauseItem
   42            | . whereClauseItem AND whereClause
   43 whereClauseItem: . col op expr
   44                | . col IS NULL
   45                | . col IS NOT NULL
   46 col: . colName
   47    | . tbName '.' colName
   67 tbName: . IDENTIFIER
   68 colName: . IDENTIFIER

    IDENTIFIER  shift, and go to state 32

    whereClause      go to state 76
    whereClauseItem  go to state 77
    col              go to state 78
    tbName           go to state 36
    colName          go to state 37


state 60

   68 colName: IDENTIFIER .

    $default  reduce using rule 68 (colName)


state 61

   17 tbStmt: UPDATE tbName SET setClause . WHERE whereClause
   57 setClause: setClause . ',' colName '=' value

    WHERE  shift, and go to state 79
    ','    shift, and go to state 80


state 62

   56 setClause: colName . '=' value

    '='  shift, and go to state 81


state 63

   18 tbStmt: SELECT selector FROM tableList . WHERE whereClause
   63 tableList: tableList . ',' tbName

    WHERE  shift, and go to state 82
    ','    shift, and go to state 83


state 64

   62 tableList: tbName .

    $default  reduce using rule 62 (tableList)


state 65

   61 cols: cols ',' col .

    $default  reduce using rule 61 (cols)


state 66

   47 col: tbName '.' colName .

    $default  reduce using rule 47 (col)


state 67

   24 field: PRIMARY . KEY '(' columnList ')'

    KEY  shift, and go to state 84


state 68

   25 field: FOREIGN . KEY '(' colName ')' REFERENCES tbName '(' colName ')'

    KEY  shift, and go to state 85


state 69

   12 tbStmt: CREATE TABLE tbName '(' fieldList . ')'
   22 fieldList: fieldList . ',' field

    ')'  shift, and go to state 86
    ','  shift, and go to state 87


state 70

   21 fieldList: field .

    $default  reduce using rule 21 (fieldList)


state 71

   23 field: colName . type notNullOrEmpty
   28 type: . INT valueIntOrEmpty
   29     | . VARCHAR valueIntOrEmpty
   30     | . DATE
   31     | . FLOAT

    INT      shift, and go to state 88
    VARCHAR  shift, and go to state 89
    DATE     shift, and go to state 90
    FLOAT    shift, and go to state 91

    type  go to state 92


state 72

   19 idxStmt: CREATE INDEX tbName '(' colName . ')'

    ')'  shift, and go to state 93


state 73

   20 idxStmt: DROP INDEX tbName '(' colName . ')'

    ')'  shift, and go to state 94


state 74

   34 valueLists: '(' . valueList ')'
   36 valueList: . value
   37          | . valueList ',' value
   38 value: . VALUE_INT
   39      | . VALUE_STRING
   40      | . NULL

    NULL          shift, and go to state 95
    VALUE_STRING  shift, and go to state 96
    VALUE_INT     shift, and go to state 97

    valueList  go to state 98
    value      go to state 99


state 75

   15 tbStmt: INSERT INTO tbName VALUES valueLists .  [';']
   35 valueLists: valueLists . ',' '(' valueList ')'

    ','  shift, and go to state 100

    $default  reduce using rule 15 (tbStmt)


state 76

   16 tbStmt: DELETE FROM tbName WHERE whereClause .

    $default  reduce using rule 16 (tbStmt)


state 77

   41 whereClause: whereClauseItem .  [';']
   42            | whereClauseItem . AND whereClause

    AND  shift, and go to state 101

    $default  reduce using rule 41 (whereClause)


state 78

   43 whereClauseItem: col . op expr
   44                | col . IS NULL
   45                | col . IS NOT NULL
   48 op: . '='
   49   | . NOT_EQUAL
   50   | . LESS_OR_EQUAL
   51   | . MORE_OR_EQUAL
   52   | . '<'
   53   | . '>'

    IS             shift, and go to state 102
    '='            shift, and go to state 103
    '<'            shift, and go to state 104
    '>'            shift, and go to state 105
    NOT_EQUAL      shift, and go to state 106
    MORE_OR_EQUAL  shift, and go to state 107
    LESS_OR_EQUAL  shift, and go to state 108

    op  go to state 109


state 79

   17 tbStmt: UPDATE tbName SET setClause WHERE . whereClause
   41 whereClause: . whereClauseItem
   42            | . whereClauseItem AND whereClause
   43 whereClauseItem: . col op expr
   44                | . col IS NULL
   45                | . col IS NOT NULL
   46 col: . colName
   47    | . tbName '.' colName
   67 tbName: . IDENTIFIER
   68 colName: . IDENTIFIER

    IDENTIFIER  shift, and go to state 32

    whereClause      go to state 110
    whereClauseItem  go to state 77
    col              go to state 78
    tbName           go to state 36
    colName          go to state 37


state 80

   57 setClause: setClause ',' . colName '=' value
   68 colName: . IDENTIFIER

    IDENTIFIER  shift, and go to state 60

    colName  go to state 111


state 81

   38 value: . VALUE_INT
   39      | . VALUE_STRING
   40      | . NULL
   56 setClause: colName '=' . value

    NULL          shift, and go to state 95
    VALUE_STRING  shift, and go to state 96
    VALUE_INT     shift, and go to state 97

    value  go to state 112


state 82

   18 tbStmt: SELECT selector FROM tableList WHERE . whereClause
   41 whereClause: . whereClauseItem
   42            | . whereClauseItem AND whereClause
   43 whereClauseItem: . col op expr
   44                | . col IS NULL
   45                | . col IS NOT NULL
   46 col: . colName
   47    | . tbName '.' colName
   67 tbName: . IDENTIFIER
   68 colName: . IDENTIFIER

    IDENTIFIER  shift, and go to state 32

    whereClause      go to state 113
    whereClauseItem  go to state 77
    col              go to state 78
    tbName           go to state 36
    colName          go to state 37


state 83

   63 tableList: tableList ',' . tbName
   67 tbName: . IDENTIFIER

    IDENTIFIER  shift, and go to state 29

    tbName  go to state 114


state 84

   24 field: PRIMARY KEY . '(' columnList ')'

    '('  shift, and go to state 115


state 85

   25 field: FOREIGN KEY . '(' colName ')' REFERENCES tbName '(' colName ')'

    '('  shift, and go to state 116


state 86

   12 tbStmt: CREATE TABLE tbName '(' fieldList ')' .

    $default  reduce using rule 12 (tbStmt)


state 87

   22 fieldList: fieldList ',' . field
   23 field: . colName type notNullOrEmpty
   24      | . PRIMARY KEY '(' columnList ')'
   25      | . FOREIGN KEY '(' colName ')' REFERENCES tbName '(' colName ')'
   68 colName: . IDENTIFIER

    PRIMARY     shift, and go to state 67
    FOREIGN     shift, and go to state 68
    IDENTIFIER  shift, and go to state 60

    field    go to state 117
    colName  go to state 71


state 88

   28 type: INT . valueIntOrEmpty
   32 valueIntOrEmpty: . VALUE_INT
   33                | .  [NOT, ')', ',']

    VALUE_INT  shift, and go to state 118

    $default  reduce using rule 33 (valueIntOrEmpty)

    valueIntOrEmpty  go to state 119


state 89

   29 type: VARCHAR . valueIntOrEmpty
   32 valueIntOrEmpty: . VALUE_INT
   33                | .  [NOT, ')', ',']

    VALUE_INT  shift, and go to state 118

    $default  reduce using rule 33 (valueIntOrEmpty)

    valueIntOrEmpty  go to state 120


state 90

   30 type: DATE .

    $default  reduce using rule 30 (type)


state 91

   31 type: FLOAT .

    $default  reduce using rule 31 (type)


state 92

   23 field: colName type . notNullOrEmpty
   26 notNullOrEmpty: . NOT NULL
   27               | .  [')', ',']

    NOT  shift, and go to state 121

    $default  reduce using rule 27 (notNullOrEmpty)

    notNullOrEmpty  go to state 122


state 93

   19 idxStmt: CREATE INDEX tbName '(' colName ')' .

    $default  reduce using rule 19 (idxStmt)


state 94

   20 idxStmt: DROP INDEX tbName '(' colName ')' .

    $default  reduce using rule 20 (idxStmt)


state 95

   40 value: NULL .

    $default  reduce using rule 40 (value)


state 96

   39 value: VALUE_STRING .

    $default  reduce using rule 39 (value)


state 97

   38 value: VALUE_INT .

    $default  reduce using rule 38 (value)


state 98

   34 valueLists: '(' valueList . ')'
   37 valueList: valueList . ',' value

    ')'  shift, and go to state 123
    ','  shift, and go to state 124


state 99

   36 valueList: value .

    $default  reduce using rule 36 (valueList)


state 100

   35 valueLists: valueLists ',' . '(' valueList ')'

    '('  shift, and go to state 125


state 101

   41 whereClause: . whereClauseItem
   42            | . whereClauseItem AND whereClause
   42            | whereClauseItem AND . whereClause
   43 whereClauseItem: . col op expr
   44                | . col IS NULL
   45                | . col IS NOT NULL
   46 col: . colName
   47    | . tbName '.' colName
   67 tbName: . IDENTIFIER
   68 colName: . IDENTIFIER

    IDENTIFIER  shift, and go to state 32

    whereClause      go to state 126
    whereClauseItem  go to state 77
    col              go to state 78
    tbName           go to state 36
    colName          go to state 37


state 102
